docs(kafka): record Kubernetes deployment baseline